syntax = "proto3";

package signup;
option go_package = ".;signup";

//账号登录//jj
message LoginRequest {
  string account = 1;
  string password = 2;
}
message LoginResponse {
  int64 userId = 1;
}
message RegisterRequest{
  string account = 1;
  string password = 2;
}
message RegisterResponse{
  bool success = 1;
}
message UpdateRequest{
  string account = 1;
  string password = 2;
}
message UpdateResponse{
  bool success = 1;
}

message PasswordSignupRequest{
  string account = 1;
  string mobile = 2;
  string sendSms = 3;
}

message PasswordSignupResponse{
  string password = 2;
}
message SendSmsRequest{
  string mobile = 1;
}
message SendSmsResponse{
  bool success = 1;
}


message SignupRequest{
 string email=1;
 string password=2;

}

message SignupResponse{
  int64 result=1;
}

service Signup {
  rpc Login(LoginRequest) returns(LoginResponse);//账号登录//jj
  rpc Register(RegisterRequest) returns(RegisterResponse);
  rpc Update(UpdateRequest) returns(UpdateResponse);
  rpc SendSms(SendSmsRequest) returns(SendSmsResponse);
  rpc PasswordRecovery(PasswordSignupRequest) returns(PasswordSignupResponse);
  rpc Send(SignupRequest) returns(SignupResponse);
}

